--- a/resources/views/quotes/edit-quote.edge
+++ b/resources/views/quotes/edit-quote.edge
@@ -8,21 +8,22 @@ offset-md-3">
                 <a href="/" class="btn btn-outline-dark ">back</a>
             </div>
             <br>
-
             <div class="clear-fix"></div>
+            <br>
             <form method="POST" action="/update-quote/{{quote.id}}">
                 {{ csrfField() }}
                 <div class="form-group">
-                    <label for="pasword">Edit Quote</label>
-                    <textarea type="text" rows="5"  name='body' 
-id="body" class="form-control" id="quote" placeholder="write the 
-inspirational quote">{{quote.body}}</textarea>
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <input type="text" name='title' id="body" class="form-control" id="title" value="{{quote.title}}" placeholder="Write the title of quote">
+                    </div>
+                    <label for="quote">Quote</label>
+                    <textarea type="text" rows="5"  name='body' id="body" class="form-control" id="quote" placeholder="write the inspirational quote">{{quote.body}}</textarea>
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn 
 btn-primary">Update</button>
                 </div>
-
             </form>
         </div>
     </div>
