--- a/resources/views/quotes/quote.edge
+++ b/resources/views/quotes/quote.edge
@@ -14,8 +14,7 @@
                     <blockquote class="blockquote mb-0">
                         <p>{{quote.body}}</p>
                         <footer class="blockquote-footer">
-                            <cite title="Source 
-Title">{{quote.username}}</cite>
+                            <cite title="Source Title">{{quote.user.username}}</cite>
                         </footer>
                     </blockquote>
                 </div>
