--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -13,12 +13,12 @@ flashMessage('successmessage') }}</span>
             <div class="col-md-4 mb-4 quote-wrapper">
                 <a href="/view-quote/{{quote.id}}" class="w-100">
                     <div class="card shadow-lg bg-dark text-white">
+                        <div class="card-title">{{quote.title}}</div>
                         <div class="card-body">
                             <blockquote class="blockquote mb-0">
                                 <p>{{quote.body}}</p>
                                 <footer class="blockquote-footer">
-                                    <cite title="Source Title"> 
-{{quote.username}}</cite>
+                                    <cite title="Source Title">{{quote.user.username}}</cite>
                                 </footer>
                             </blockquote>
                             @if(auth.user.id == quote.user_id)
