--- a/resources/views/quotes/view-quote.edge
+++ b/resources/views/quotes/view-quote.edge
@@ -12,7 +12,7 @@
                 <div class="form-group">
                 	<input 
                 		class="form-control" 
-                		value="{{quote.username}}"
+                		value="{{quote.user.username}}"
                     	disabled>
             	</div>
                 <div class="form-group">
