[ADD] bootstrap y jquery agregados en la carrpeta public

--- a/resources/views/layouts/app.edge
+++ b/resources/views/layouts/app.edge
@@ -5,15 +5,15 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	    <title>adonis-quotes-app</title>
-	    {{ style('https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css') }}
+	    {{ script('jquery-3.3.1.slim.min.js') }}
+	    {{ script('bootstrap/bootstrap.min.js') }}
+	    {{ style('bootstrap/bootstrap.min.css') }}
 	    {{ style('style') }}
-	    {{ script('https://code.jquery.com/jquery-3.3.1.slim.min.js') }}
 	</head>
 	<body>
 	    <div class="container-fliud">
 	        @include('navbar')
 	        @!section('content')
 	    </div>
-	    {{ script('https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js') }}
 	</body>
 </html>
