--- a/resources/views/navbar.edge
+++ b/resources/views/navbar.edge
@@ -1,47 +1,68 @@
-<nav class="navbar navbar-expand-lg navbar-dark 
+<nav 
+    class="navbar navbar-expand-lg navbar-dark 
 text-white">
-    <a class="navbar-brand" >LOGO</a>
-    <button class="navbar-toggler" type="button" 
-data-toggle="collapse" data-target="#navbarNav" 
-aria-controls="navbarNav" aria-expanded="false" 
-aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <a 
+        class="navbar-brand" >NOTAS</a>
+    <button 
+        class="navbar-toggler" 
+        type="button" 
+        data-toggle="collapse" 
+        data-target="#navbarNav" 
+        aria-controls="navbarNav" 
+        aria-expanded="false" 
+        aria-label="Toggle navigation">
+        <span 
+            class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" 
-id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active ">
-                <a class="btn text-white" 
-href="/">Home</a>
+    <div 
+        class="collapse navbar-collapse" 
+        id="navbarNav">
+        <ul 
+            class="navbar-nav">
+            <li 
+                class="nav-item active ">
+                <a 
+                    class="btn text-white" 
+                    href="/">Inicio</a>
             </li>
         </ul>
     </div>
-    <div class="navbar-right" id="navbarNav">
+    <div 
+        class="navbar-right" 
+        id="navbarNav">
         @loggedIn
             <ul class="navbar-nav">
                     <li>
                         <div class="text-right">
                              <a 
-href="{{route('create.quote')}}" class="btn 
-btn-outline-primary">Create Quote</a>
+                                href="{{route('create.quote')}}" 
+                                class="btn btn-outline-primary">Nueva Nota</a>
                         </div>
                     </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link 
-dropdown-toggle" href="#" id="navbarDropdownMenuLink" 
-role="button" data-toggle="dropdown" 
-aria-haspopup="true" aria-expanded="false">
+                    <a 
+                        class="nav-link dropdown-toggle" 
+                        href="#" 
+                        id="navbarDropdownMenuLink" 
+                        role="button" 
+                        data-toggle="dropdown" 
+                        aria-haspopup="true" 
+                        aria-expanded="false">
                        {{ auth.user.username}}
                     </a>
-                    <div class="dropdown-menu" 
-aria-labelledby="navbarDropdownMenuLink">
-                        <form method="POST" 
-action="{{route('logout')}}">
+                    <div 
+                        class="dropdown-menu" 
+                        aria-labelledby="navbarDropdownMenuLink">
+                        <form 
+                            method="POST" 
+                            action="{{route('logout')}}">
                             {{ csrfField() }}
-                              <button  type="submit" 
-class="dropdown-item" href="">logout</button>
+                              <button  
+                                type="submit" 
+                                class="dropdown-item" 
+                                href="">Salir</button>
                         </form>
                     </div>
                 </li>
@@ -50,16 +71,17 @@ class="dropdown-item" href="">logout</button>
             <ul class="navbar-nav">
                 <li class="nav-item active pr-2">
                     <a 
-href="{{route('login.create')}}" class="btn 
-btn-outline-danger">
-                      login
+                        href="{{route('login.create')}}" 
+                        class="btn btn-outline-danger">
+                      Iniciar Sesion
                     </a>
                 </li>
-                <li class="nav-item active pr-2">
+                <li 
+                    class="nav-item active pr-2">
                     <a 
-href="{{route('register.create')}}" class="btn 
-btn-outline-primary">
-                        Register
+                        href="{{route('register.create')}}" 
+                        class="btn btn-outline-primary">
+                        Registrar
                     </a>
                 </li>
             </ul>
