--- a/resources/views/quotes/create-quote.edge
+++ b/resources/views/quotes/create-quote.edge
@@ -5,7 +5,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-6 shadow bg-white mt-5 rounded p-3">
             <div class="float-right">
-                <a href="/" class="btn btn-outline-dark ">back</a>
+                <a href="/" class="btn btn-outline-dark ">atras</a>
             </div>
                 <br>
 
@@ -14,18 +14,17 @@
 action="{{route('store.quote')}}">
                     {{ csrfField() }}
                     <div class="form-group">
-                        <label for="title">Create Quote</label>
-                        <input type="text" name='title' id="body" class="form-control" id="title" placeholder="Write the title of quote">
+                        <label for="title">Titulo</label>
+                        <input type="text" name='title' id="body" class="form-control" id="title" placeholder="Escribe el titulo de la nota">
                     </div>
                     <div class="form-group">
-                        <label for="quote">Create Quote</label>
-                        <textarea type="text" rows="5"  name='body' id="body" class="form-control" id="quote" placeholder="Write an 
-inspirational quote"></textarea>
+                        <label for="quote">Contenido</label>
+                        <textarea type="text" rows="5"  name='body' id="body" class="form-control" id="quote" placeholder="Escribe el contenido de la nota"></textarea>
                     </div>
 
                     <div class="text-center">
                         <button type="submit" class="btn 
-btn-primary">Submit</button>
+btn-primary">Guardar</button>
                     </div>
                 </form>
             </div>
