--- a/resources/views/quotes/view-quote.edge
+++ b/resources/views/quotes/view-quote.edge
@@ -4,17 +4,17 @@
     <div class="row">
         <div class="col-md-6 shadow bg-white rounded p-3 offset-md-3">
             <div class="float-right">
-                <a href="/" class="btn btn-outline-dark ">back</a>
+                <a href="/" class="btn btn-outline-dark ">atras</a>
             </div>
             <br>
             <div class="clear-fix"></div>
             <br>
-                <div class="form-group">
+            	<div class="form-group">
                 	<input 
                 		class="form-control" 
-                		value="{{quote.user.username}}"
+                		value="{{quote.title}}"
                     	disabled>
-            	</div>
+                </div>
                 <div class="form-group">
                     <textarea 
                     	disabled
