--- a/resources/views/auth/register.edge
+++ b/resources/views/auth/register.edge
@@ -1,36 +1,73 @@
 @layout('layouts/app')
 @section('content')
-  <div class="container ">
-    <div class="row">
-        <div class="col-md-4  bg-white p-3 mt-5 shadow no-border 
-rounded offset-md-4">
-          <form method="POST" action="{{route('register.store')}}">
+  <div 
+    class="container ">
+    <div 
+      class="row">
+        <div 
+          class="col-md-4 bg-white p-3 mt-5 shadow no-border rounded offset-md-4">
+          <form 
+            method="POST" 
+            action="{{route('register.store')}}">
             {{ csrfField() }}
-              <div class="form-group">
-                <label for="name">Fullname</label>
-                <input type="text" class="form-control" id="name" 
-name="name"  value="{{old('name','')}}" placeholder="Enter 
-Fullname">
-                {{ elIf('<span class=text-danger>$self</span>', 
-getErrorFor('name'), hasErrorFor('name')) }}
+              <div 
+                class="form-group">
+                <label 
+                  for="name">Nombre Completo</label>
+                <input 
+                  type="text" 
+                  class="form-control" 
+                  id="name" 
+                  name="name" 
+                  value="{{old('name','')}}" 
+                  placeholder="Ingresa tu Nombre Completo">
+                  @if(getErrorFor('name') || hasErrorFor('name'))
+                    <span 
+                      class=text-danger>
+                      {{getErrorFor('name')}}
+                    </span>
+                  @endif
               </div>
-              <div class="form-group">
-                <label for="email">Email address</label>
-                <input type="email" class="form-control" id="email"  
-name="email" value="{{old('email','')}}" placeholder="Enter email">
-                {{ elIf('<span class=text-danger>$self</span>', 
-getErrorFor('email'), hasErrorFor('email')) }}
+              <div 
+                class="form-group">
+                <label 
+                  for="email">Correo Electronico</label>
+                <input 
+                  type="email" 
+                  class="form-control" 
+                  id="email" 
+                  name="email" 
+                  value="{{old('email','')}}" 
+                  placeholder="Ingresa tu Correo Electronico">
+                  @if(getErrorFor('email') || hasErrorFor('email'))
+                    <span 
+                      class=text-danger>
+                      {{getErrorFor('email')}}
+                    </span>
+                  @endif
               </div>
-              <div class="form-group">
-                <label for="pasword">Password</label>
-                <input type="password" class="form-control" 
-id="password" name="password" placeholder="Password">
-                {{ elIf('<span class=text-danger>$self</span>', 
-getErrorFor('password'), hasErrorFor('password')) }}
+              <div 
+                class="form-group">
+                <label 
+                  for="pasword">Contraseña</label>
+                <input 
+                  type="password" 
+                  class="form-control" 
+                  id="password" 
+                  name="password" 
+                  placeholder="Contraseña">
+                  @if(getErrorFor('password') || hasErrorFor('password'))
+                    <span 
+                      class=text-danger>
+                      {{getErrorFor('password')}}
+                    </span>
+                  @endif
               </div>
-              <div class="text-center">
-                  <button type="submit" class="btn 
-btn-primary">Submit</button>
+              <div 
+                class="text-center">
+                  <button 
+                    type="submit" 
+                    class="btn btn-primary">Registrar</button>
               </div>
           </form>
         </div>
